--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,7 +1,21 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+.forest-tree-A-1 {
+            background-image: url('./public/img/tree-silhouette-dark-a.png');
+        }
 
+        .forest-tree-B-2,
+        .forest-tree-A-3 {
+            background-image: url('./public/img/tree-silhouette-dark-b.png');
+        }
+
+        .forest-tree-C-small-1,
+        .forest-tree-C-small-2,
+        .forest-tree-C-small-3,
+        .forest-tree-C-small-4 {
+            background-image: url('./public/img/tree-silhouette-dark-b.png');
+        }
 .forest-tree {
     background-size: contain; 
     background-position: center bottom;
