--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+@theme {
+    --breakpoint-xs: 18rem;
+}
 
 .forest-tree {
     background-size: contain; 
@@ -32,6 +35,7 @@
         height: 75vh;
         left: 60%;
         opacity: 0.9;
+        z-index: 10;
     }
     
     .forest-tree-B-2 {
@@ -41,7 +45,6 @@
         opacity: 0.7;
         z-index: 0;
     }
-    /* Bagian yang bermasalah di sini telah dihapus */
 }
 
 @media (min-width: 1024px) {
